tests/endtoend/failure/expected/error_expressions4c.compile.out
error_expressions4c.silly:1:13: error: parse error: mismatched input '<' expecting ';'
    1 | PRINT 1 < 2 < 3; // Expected: 0 ( (1 < 2) < 3 ) = 1 < 3 = 1, but if bool as 1, then 1 < 3 = 1 (TRUE)
      |             ^
